--- a/CodeNameFive/View/ur-PK.lproj/Main.strings
+++ b/CodeNameFive/View/ur-PK.lproj/Main.strings
@@ -652,7 +652,7 @@
 "tsI-oB-DWY.title" = "Register Page 1";
 
 /* Class = "UILabel"; text = "RS. 100.00"; ObjectID = "ugy-i7-Blo"; */
-"ugy-i7-Blo.text" = "RS. 100.00";
+"ugy-i7-Blo.text" = "Rs. 100.00";
 
 /* Class = "UILabel"; text = "L-44 Sector 11/B Bufferzone, Karachi"; ObjectID = "uqg-Vc-jK4"; */
 "uqg-Vc-jK4.text" = "L-44 Sector 11/B Bufferzone, Karachi";
